RESOLVED FIXED73641
WebKit2: Freeze the state of the layer tree until frame load completion if incremental rendering is suppressed
https://bugs.webkit.org/show_bug.cgi?id=73641
Summary WebKit2: Freeze the state of the layer tree until frame load completion if in...
Andy Estes
Reported 2011-12-02 03:12:52 PST
WebKit2: Freeze the state of the layer tree until frame load completion if incremental rendering is suppressed
Attachments
Patch (4.46 KB, patch)
2011-12-02 03:22 PST, Andy Estes
darin: review+
Andy Estes
Comment 1 2011-12-02 03:22:07 PST
Darin Adler
Comment 2 2011-12-02 09:15:26 PST
Comment on attachment 117598 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=117598&action=review > Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:537 > - if (m_frame == m_frame->page()->mainWebFrame()) > + if (m_frame == m_frame->page()->mainWebFrame() && !webPage->corePage()->settings()->suppressIncrementalRendering()) > webPage->drawingArea()->setLayerTreeStateIsFrozen(false); Seems OK, but perhaps a bit of a layering problem that this code needs to check the setting. Not sure why this code gets to the page as m_frame->page() in one half of the expression and as webPage->corePage() in the other. Aren’t those guaranteed to be the same page?
Andy Estes
Comment 3 2011-12-02 11:16:24 PST
(In reply to comment #2) > (From update of attachment 117598 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=117598&action=review > > > Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:537 > > - if (m_frame == m_frame->page()->mainWebFrame()) > > + if (m_frame == m_frame->page()->mainWebFrame() && !webPage->corePage()->settings()->suppressIncrementalRendering()) > > webPage->drawingArea()->setLayerTreeStateIsFrozen(false); > > Seems OK, but perhaps a bit of a layering problem that this code needs to check the setting. > > Not sure why this code gets to the page as m_frame->page() in one half of the expression and as webPage->corePage() in the other. Aren’t those guaranteed to be the same page? One is a WebKit2 WebPage and the other is it's corresponding WebCore::Page. I need the WebCore::Page to get at the Settings object. Thanks for the review!
Andy Estes
Comment 4 2011-12-02 11:17:13 PST
I swear I know the difference between it's and its :/
Andy Estes
Comment 5 2011-12-02 11:21:27 PST
Note You need to log in before you can comment on or make changes to this bug.